@@ -1,5 +1,17 @@
 2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	Defined message digest algorithm name as static const std::string
+	* src/DHTTokenTracker.cc
+	* src/DHTUtil.cc
+	* src/DefaultBtContext.cc
+	* src/MSEHandshake.cc
+	* src/MessageDigestHelper.cc
+	* src/Peer.cc
+	* src/messageDigest.cc
+	* src/messageDigest.h
+
+2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	Made string literals used in SAX parser static const std::string.
 	* src/FileMetalinkParserState.cc
 	* src/FileMetalinkParserState.h
